Fixed spacing and added shadows

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -57,4 +57,5 @@ html, body {
 .channel {
 	border: 1px solid black;
 	margin: 10px;
+	box-shadow: 1px 1px 5px #888;
 }
